src/objects/Win_Import_Table__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Win Import Table</relationshipLabel>
        <relationshipName>Win_Import_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AptDate__c</fullName>
        <label>AptDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apt_Id__c</fullName>
        <label>Apt Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Note__c</fullName>
        <label>Calendar Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CellPhone__c</fullName>
        <label>CellPhone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Appointment</label>
        <referenceTo>Clinical_Appointment__c</referenceTo>
        <relationshipLabel>Win Import Table</relationshipLabel>
        <relationshipName>Win_Import_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Win Import Table</relationshipLabel>
        <relationshipName>Win_Import_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Time__c</fullName>
        <label>Completion Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consult Room</label>
        <referenceTo>Consult_Rooms__c</referenceTo>
        <relationshipLabel>Win Import Table</relationshipLabel>
        <relationshipName>Win_Import_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etime__c</fullName>
        <label>Etime</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRX_Pot_Name__c</fullName>
        <label>HRX Pot Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRX_Room_Name__c</fullName>
        <label>HRX Room Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hope_RX_Apt_Name__c</fullName>
        <label>Hope RX Apt Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_ID__c</fullName>
        <label>Opp ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Win Import Table</relationshipLabel>
        <relationshipName>Win_Import_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <label>Patient ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_POT_Apt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT Apt</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Win Import Table</relationshipLabel>
        <relationshipName>Win_Import_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_POT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT</label>
        <referenceTo>Patient_POT__c</referenceTo>
        <relationshipLabel>Win Import Table</relationshipLabel>
        <relationshipName>Win_Import_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_of_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan of Treatment</label>
        <referenceTo>Plan_of_Treatment__c</referenceTo>
        <relationshipLabel>Win Import Table</relationshipLabel>
        <relationshipName>Win_Import_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preliminary_Treatment_Plan__c</fullName>
        <label>Preliminary Treatment Plan</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Row Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stime__c</fullName>
        <label>Stime</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_From__c</fullName>
        <label>Time From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_To__c</fullName>
        <label>Time To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Added__c</fullName>
        <label>Treatment Added</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Option_Name__c</fullName>
        <label>Treatment Option Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Time__c</fullName>
        <label>Treatment Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wait_Time__c</fullName>
        <label>Wait Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Apt_Name__c</fullName>
        <label>Win Apt Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_City__c</fullName>
        <label>Win City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>WorkPhone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Win Import Table</label>
    <nameField>
        <displayFormat>WIT-{0000}</displayFormat>
        <label>Win Import Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Win Import Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>